Fix text overflow for Emojis

--- a/Yep/Landing-Page/src/sass/topic.sass
+++ b/Yep/Landing-Page/src/sass/topic.sass
@@ -97,7 +97,7 @@ html
 
         .text
             max-height: 100px
-            overflow-y: scroll
+            // overflow-y: scroll
             display: inline-block
             padding-left: 60px
             margin: 10px
